组件替换：DozerMapper 替换为MapStruct，QueryDSL替换为fork的jakarta版本